--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.x-dev"
+        },
+        "typo3/cms": {
+            "extension-key": "deferred_image_processing"
         }
     },
     "autoload": {
