--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,6 +28,7 @@ jobs:
               run: |
                   comment='${{ github.event.release.body }}'
                   comment="${comment//'%'/'%25'}"
+                  comment="${comment//'`'/''}"
                   comment="${comment//$'\n'/'%0A'}"
                   comment="${comment//$'\r'/'%0D'}"
 
