--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-release/1.0": "1.0.x-dev"
         },
         "typo3/cms": {
             "extension-key": "deferred_image_processing"
