--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require": {
-        "php": "^7.2.0",
+        "php": "^7.2 || ^8.0",
         "typo3/cms-core": "^v10.4.6 || ^v11.5.0"
     }
 }
