--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
     },
     "require": {
         "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^v10.4.6 || ^v11.5.0"
+        "typo3/cms-core": "^v10.4.6 || ^v11.5.0 || ^v12.4"
     }
 }
