--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-release/1.1": "1.1.x-dev"
+            "dev-release/2.0": "2.0.x-dev"
         },
         "typo3/cms": {
             "extension-key": "deferred_image_processing"
@@ -21,6 +21,6 @@
     },
     "require": {
         "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^v10.4.6 || ^v11.5.0 || ^v12.4"
+        "typo3/cms-core": "^^v11.5.0 || ^v12.4"
     }
 }
