--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "name": "webcoast/deferred-image-processing",
+    "type": "typo3-cms-extension",
     "description": "Handles image processing on request instead of during page generation",
     "keywords": ["typo3", "cms", "image", "processing", "scaling", "defer", "deferred"],
-    "type": "typo3-cms-extension",
+    "homepage": "https://github.com/webcoast-dk/deferred-image-processing",
     "license": "GPL-3.0-or-later",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-release/2.0": "2.0.x-dev"
@@ -14,13 +13,13 @@
             "extension-key": "deferred_image_processing"
         }
     },
+    "require": {
+        "php": "^7.4||^8.0",
+        "typo3/cms-core": "^11.5||^12.4"
+    },
     "autoload": {
         "psr-4": {
             "WEBcoast\\DeferredImageProcessing\\": "Classes/"
         }
-    },
-    "require": {
-        "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^v11.5.0 || ^v12.4"
     }
 }
