--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,12 +6,12 @@ jobs:
     publish:
         name: Publish to TER
         if: startsWith(github.ref, 'refs/tags/v')
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         env:
             TYPO3_API_TOKEN: ${{ secrets.TYPO3_API_TOKEN }}
         steps:
             - name: Checkout repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
 
             - name: Check tag
               run: |
