--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: publish
 on:
     release:
-        types: [created, edited]
+        types: [ created, edited ]
 jobs:
     publish:
         name: Publish to TER
@@ -10,43 +10,44 @@ jobs:
         env:
             TYPO3_API_TOKEN: ${{ secrets.TYPO3_API_TOKEN }}
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+            -   name: Checkout repository
+                uses: actions/checkout@v4
 
-            - name: Check tag
-              run: |
-                  if ! [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}$ ]]; then
-                    exit 1
-                  fi
+            -   name: Check tag
+                run: |
+                    if ! [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}$ ]]; then
+                      exit 1
+                    fi
 
-            - name: Get version
-              id: get-version
-              run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\/v/}
+            -   name: Get version
+                id: get-version
+                run: echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_OUTPUT
 
-            - name: Get comment
-              id: get-comment
-              run: |
-                  comment='${{ github.event.release.body }}'
-                  comment="${comment//'%'/'%25'}"
-                  comment="${comment//'`'/''}"
-                  comment="${comment//$'\n'/'%0A'}"
-                  comment="${comment//$'\r'/'%0D'}"
 
-                  if [[ -z "${comment// }" ]]; then
-                    echo ::set-output name=comment::Released version ${{ steps.get-version.outputs.version }}
-                  else
-                    echo ::set-output name=comment::$comment
-                  fi
+            -   name: Get comment
+                id: get-comment
+                run: |
+                    comment="${{ github.event.release.body }}"
+                    comment="${comment//'%'/'%25'}"
+                    comment="${comment//'`'/''}"
+                    comment="${comment//$'\n'/'%0A'}"
+                    comment="${comment//$'\r'/'%0D'}"
+                    
+                    if [[ -z "${comment// }" ]]; then
+                     echo "comment=Released version ${{ steps.get-version.outputs.version }}" >> $GITHUB_OUTPUT
+                    else
+                      echo "comment=$comment" >> $GITHUB_OUTPUT
+                    fi
 
-            - name: Setup PHP
-              uses: shivammathur/setup-php@v2
-              with:
-                  php-version: 7.4
-                  extensions: intl, mbstring, json, zip, curl
-                  tools: composer:v2
+            -   name: Setup PHP
+                uses: shivammathur/setup-php@v2
+                with:
+                    php-version: 7.4
+                    extensions: intl, mbstring, json, zip, curl
+                    tools: composer:v2
 
-            - name: Install tailor
-              run: composer global require typo3/tailor --prefer-dist --no-progress --no-suggest
+            -   name: Install tailor
+                run: composer global require typo3/tailor --prefer-dist --no-progress --no-suggest
 
-            - name: Publish to TER
-              run: php ~/.composer/vendor/bin/tailor ter:publish --comment "${{ steps.get-comment.outputs.comment }}" ${{ steps.get-version.outputs.version }}
+            -   name: Publish to TER
+                run: php ~/.composer/vendor/bin/tailor ter:publish --comment "${{ steps.get-comment.outputs.comment }}" ${{ steps.get-version.outputs.version }}
