[BUGFIX] Use env var for release body in publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,10 @@ jobs:
 
             -   name: Get comment
                 id: get-comment
+                env:
+                    RELEASE_BODY: ${{ github.event.release.body }}
                 run: |
+                    comment="$RELEASE_BODY"
                     comment="${{ github.event.release.body }}"
                     comment="${comment//'%'/'%25'}"
                     comment="${comment//'`'/''}"
