[FEATURE] TYPO3 CMS 13 compatibility
* improve process command:
  * remove `verbose` option from command
  * configure and use `status` option correctly
  * check for verbosity correctly
  * return early if no files are pending processing
* update dependency injection configuration
* update TYPO3 CMS and PHP dependency
* update branch alias

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -3,14 +3,7 @@ services:
       autowire: true
       autoconfigure: true
       public: false
-      
-      # Register the command to process deferred image processing entries
-   WEBcoast\DeferredImageProcessing\Command\ProcessCommand:
-      tags:
-         -  name: 'console.command'
-            command: 'deferred_image_processing:process'
-            description: 'Process all entries in deferred image processing file list'
-            hidden: false
 
-   WEBcoast\DeferredImageProcessing\Resource\Processing\DeferredImageProcessor:
-      public: true
+   WEBcoast\DeferredImageProcessing\:
+        resource: '../Classes/*'
+        exclude: '../Classes/Event/*'
